// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`approve > approves the spender for an allowance equal to the spend request 1`] = `
[
  [
    "0xdeadbeef",
    900n,
    {
      "nonce": 1,
    },
  ],
]
`;

exports[`approve > approves the spender for an allowance equal to the spend request 2`] = `
[
  [
    "0xdeadbeef",
    1000n,
    {
      "nonce": 1,
    },
  ],
]
`;
